2.0.0
- use CMake build system (#37)
